# Walker

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.bat
Walker/: CMakeLists.txt
Walker/include/: Walker.h  Walker.inc  Walker.pch.inc  Walker_pch.h  pch.h
Walker/include/Analytics/Memory/: MemoryAnalytics.h
Walker/include/Container/: TVector.h  Vector.h
Walker/include/Core/: AWindow.h  Application.h  Base.h  Builder.h  Cloneable.h  EntryPoint.h  Event.h  Events.h  Factory.h  Graphics.h  PlatformDetection.h  Scene.h  TypeDef.h  UApplication.h  Window.h
Walker/include/Graphics/: Graphics.h  Graphics.inc  Graphics_pch.h
Walker/include/Graphics/Command/: CommandType.h  ICommandAllocator.h  ICommandList.h  ICommandQueue.h
Walker/include/Graphics/Core/: ASwapChain.h  GraphicsAbstractFactory.h  GraphicsType.h  IAdapter.h  IDevice.h  IFence.h  IPipelineState.h  UDisplay.h  UGraphics.h  UGraphicsAPI.h
Walker/include/Graphics/Descriptor/: ADescriptorHeap.h  DescriptorType.h
Walker/include/Graphics/RHI/: RHI.h
Walker/include/Graphics/RHI/Command/: CommandType.h  ICommandAllocator.h  ICommandList.h  ICommandQueue.h
Walker/include/Graphics/RHI/Core/: ASwapChain.h  IAdapter.h  IDevice.h  (+4 more)
Walker/include/Graphics/Resource/: IHeap.h  IResource.h  ResourceType.h  UBuffer.h  UTexture1D.h  UTexture2D.h  UTexture3D.h
Walker/include/Graphics/ResourceBarrier/: IAliasingBarrier.h  IResourceBarrier.h  ITransitionBarrier.h
Walker/include/Graphics/ResourceView/: AVertexBufferView.h  IResourceView.h
Walker/include/Graphics/Shader/: IShader.h  IVertexShader.h  ShaderType.h  UPixelShader.h  UVertexShader.h
Walker/include/Memory/: Allocator.h  Memory.h  Memory.pch.inc  MemoryMapping.h  MemoryPool.h  Ref.h  Scope.h  Visitor.h  WeakRef.h
Walker/include/Memory/Allocator/: PageAllocator.h  USlabAllocater.h
Walker/include/Memory/Core/: IAllocator.h  MemoryType.h  TRef.h  TScope.h  TWeakRef.h  UMemoryPool.h
Walker/include/OS/: IOSAbstractFactory.h  OSAbstractFactory.h  OSFactory.h  OS_pch.h  UOSFactory.h
Walker/include/OS/Core/: UOSFactory.h
Walker/include/OS/Event/: WindowEvent.h
Walker/include/OS/Factory/: IOSAbstractFactory.h
Walker/include/OS/Memory/: IPageAllocator.h  MemoryType.h
Walker/include/OS/Window/: AWindow.h
Walker/include/Render/: Adapter.h  Command.h  CommandAllocator.h  CommandList.h  CommandQueue.h  DescriptorHeap.h  Device.h  Fence.h  PipelineState.h  Render.h  RenderMakro.h  RenderPCH.h  RenderTargetView.h  Renderer.h  RendererAPI.h  RendererMakro.h  RendererStructs.h  RootSignature.h  SwapChain.h
Walker/include/Render/Command/: CommandAllocator.h  CommandList.h  CommandQueue.h  CommandType.h  CommandTypes.h
Walker/include/Render/Core/: AbstractFactory.h  Adapter.h  CoreTypes.h  Device.h  Display.h  Fence.h  PipelineState.h  Renderer.h  RendererAPI.h  RendererMakro.h  RendererStructs.h  RootSignature.h  SwapChain.h
Walker/include/Render/Descriptor/: DescriptorHeap.h  DescriptorTable.h  DescriptorTypes.h
Walker/include/Render/Resource/: Buffer.h  Buffers.h  Heap.h  Resource.h  ResourceBuilder.h  ResourceTypes.h  Texture.h  Texture1D.h  Texture1DArray.h  Texture2D.h  Texture2DArray.h  Texture3D.h
Walker/include/Render/ResourceBarrier/: AliasingBarrier.h  ResourceBarrier.h  TransitionBarrier.h  UAVBarrier.h
Walker/include/Render/ResourceView/: ConstantBufferView.h  DepthStencilView.h  IndexBufferView.h  RenderTargetView.h  ResourceView.h  Samplers.h  ShaderResourceView.h  UnorderedAccessView.h  VertexBufferView.h
Walker/include/Render/Shader/: Shader.h  VertexShader.h
Walker/include/World/: World.h
Walker/shader/: BasePixelShader.hlsl  BaseVertexShader.hlsl
Walker/src/Core/: AWindow.cc  AWindow.cpp  Application.cpp  RendererAPI.cpp  UApplication.cc  UApplication.cpp  UGraphicsAPI.cc  UGraphicsAPI.cpp  Window.cpp
Walker/src/Graphics/: GraphicsType.cc  UGraphics.cc  UGraphics.cpp
Walker/src/Graphics/Resource/: UBuffer.cc  UTexture1D.cc  UTexture2D.cc  UTexture3D.cc
Walker/src/Memory/: USlabAllocater.cc
Walker/src/OS/: OSFactory.cpp  UOSFactory.cc
Walker/src/OS/Window/: AWindow.cc
Walker/src/Platform/DirectX12/: DX12Adapter.cpp  DX12Command.cpp  DX12CommandAllocator.cpp  DX12CommandList.cpp  DX12CommandQueue.cpp  DX12Device.cpp  DX12Fence.cpp  DX12Graphics.cpp  DX12Renderer.cpp  DX12SwapChain.cpp
Walker/src/Platform/Windows/: WindowsWindow.cpp
Walker/src/Render/: Adapter.cpp  Buffers.cpp  CommandAllocator.cpp  CommandList.cpp  CommandQueue.cpp  DescriptorHeap.cpp  Device.cpp  Fence.cpp  Heap.cpp  RenderTargetView.cpp  Renderer.cpp  RootSignature.cpp  SwapChain.cpp  TransitionBarrier.cpp  Types.cpp
Walker/src/Render/Resource/: Buffer.cpp  Texture2D.cpp
Walker/src/Renderer/: Adapter.cpp  Command.cpp  CommandAllocator.cpp  CommandList.cpp  CommandQueue.cpp  Device.cpp  Fence.cpp  Renderer.cpp
(+323 files in other folders)
